--- a/packages/examples/simple-crm/rust/Cargo.toml
+++ b/packages/examples/simple-crm/rust/Cargo.toml
@@ -8,3 +8,6 @@ crate-type = ["cdylib"]
 
 [dependencies]
 wasm-bindgen = "0.2"
+serde = { version = "1.0", features = ["derive"] }
+serde-wasm-bindgen = "0.5"
+serde_json = "1.0"
