simple-mpa simplified folder structure

--- a/packages/examples/simple-mpa/site.yaml
+++ b/packages/examples/simple-mpa/site.yaml
@@ -2,4 +2,4 @@
 title: Simple multi-page application / Nue
 globals: [ "@global", view, controllers, css ]
 view_transitions: true
-libs: [app]
+libs: [app/view]
